--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2,9 +2,10 @@
 
 /* 基础字体配置 */
 * {
-  font-family: "lores-12", sans-serif;
+  font-family: "Pixelify Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
+  line-height: normal;
 }
 
 /* 去除按钮的 ring-shadow 效果 */
